# crypto-benchmarks

./: Cargo.toml  README.md  bench-output.txt  big-bench.txt  compare.py  run-bench.sh  small-bench.txt  todo
benches/: ed25519_verify.rs  verifiable_validate.rs
src/: lib.rs
