[package]
name = "ressai"
version = "0.1.0"
edition = "2024"

[dependencies]
sp-core = "*"
verifiable = { git = "https://github.com/paritytech/verifiable.git" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "ed25519_verify"
harness = false

[[bench]]
name = "verifiable_validate"
harness = false
